<!--
  Copyright 2014 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Muzei Flickr</string>
    <string name="source_name">Flickr</string>
    <string name="source_description">Choose photos from flickr</string>
    <string name="search_terms">Search terms</string>
    <string name="content_type">Content type</string>
    <string name="refresh_3G">Only over WIFI</string>
    <string name="landscape">Landscape</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="refresh_rate">Refresh rate</string>
    <string name="main_settings">Main settings</string>
    <string name="user_not_found_revert">User %s not found. Reverting to search mode.</string>
    <string name="user_not_found_no_revert">User %s not found. The app will use the last valid user.</string>
    <string name="settings_title">Flickr</string>
    <string name="settings_title_bottom">for muzei</string>
    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="app_description">Simple Muzei extension to display image from Flickr on your wallpaper.</string>
    <string name="developed_by"><![CDATA[Developed by <b>Nicolas POMEPUY</b>]]></string>
    <string name="widget_name">Flickr for Muzei</string>
    <string name="widget_disabled">Flickr for Muzei is disabled</string>
    <string name="no_photo">No photo found for this search. Reverting to default search.</string>
    <string name="add_item">Add item</string>
    <string name="user_no_photo">User has no photo</string>
    <string name="group_no_photo">Group has no photo</string>
    <string name="no_group_found">No group found</string>
    <string name="tag_no_photo">Tag has no photo</string>
    <string name="user_not_found">User not found</string>
    <string name="network_error">Network error</string>
    <string name="search_exists">Search already exists</string>
    <string name="user_exists">User already exists</string>
    <string name="group_exists">Groups already exists</string>
    <string name="tag_exists">Tag already exists</string>
    <string name="undo">Undo</string>
    <string name="share">Share</string>
    <string name="restart">Restart</string>
    <string name="pause">Pause</string>
    <string name="no_artwork">No artwork to share</string>
    <string name="choose_group">Choose a group</string>
    <string name="add_artist">Add artist</string>
    <string name="unable_add_user">Unable to add user</string>
    <string name="user_added">User has been added</string>
    <string name="randomize">Randomize photos</string>
    <string name="login">Login</string>
    <string name="import_contacts">Import contacts</string>
    <string name="import_groups">Import groups</string>
    <string name="add_my_stream">Add my stream</string>
    <string name="logout">Logout</string>
    <string name="no_contact">No contact found</string>
    <string name="import_favorites">Import my favorites</string>
    <string name="all">Select all / Deselect all</string>
    <string name="import_result">Import finished.\nSuccess: %1$s\nFailed: %2$s</string>
    <string name="nothing_to_import">Nothing to import</string>
    <string name="favorites">Favorites</string>
    <string name="add_favorites">Add to favorites</string>
    <string name="added_to_favorites">Photo added to favorites</string>
    <string name="unable_add_favorite">Unable to favorite photo</string>
    <string name="already_in_favorites">This photo were already in your favorites</string>
    <string name="download">Download image</string>
    <string name="downloading_image">Downloading your image</string>
    <string name="being_downloaded">%s is being downloaded</string>
    <string name="image_downloaded">Image downloaded</string>
    <string name="download_error">Download has failed</string>
    <string name="show_picture">Show picture</string>
    <string name="download_picture">Download picture</string>
    <string name="send_flickr">Send to flickr</string>
    <string name="remove">Remove</string>
    <string name="select_all">Select all</string>
    <string name="no_favorite">No favorite for now.\nYou can add favorites from the Muzei menu or the widget.\nYou can also import your favorites from Flickr when logged.</string>
    <string name="join_group">Join</string>
    <string name="view_flickr">View in Flickr</string>
    <string name="oauth_connection_error">Unable to reach Flickr. Please make sure you have a connection</string>
    <string name="interestingness">Interestingness</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="tag">Tag</string>
    <string name="group">Group</string>
    <string name="set">Set</string>
    <string name="set_owner">Set\'s owner</string>
    <string name="choose_set">Choose set</string>
    <string name="next">Next</string>
    <string name="user_not_set">User has no set</string>
    <string name="add_my_sets">Add my sets</string>
</resources>
