<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44000000"
    tools:context=".ui.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card1"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="invisible">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/libraries"
                android:fontFamily="fonts/alegreya-black-italic.ttf"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/muzei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:fontFamily="fonts/alegreya-black-italic.ttf"
                android:text="@string/widget_name"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/about_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/app_description"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/developed_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/google_plus"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="5dp"
                    android:src="@drawable/gplus" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="5dp"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:id="@+id/blog"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="5dp"
                    android:src="@drawable/blog" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>